[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/particles/Death_particles.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/misc/spike.png" type="Texture" id=2]
[ext_resource path="res://scripts/Bloody_spike.gd" type="Script" id=3]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 16, 16, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.3754, 16 )

[node name="BloodySpike" type="Node2D"]
script = ExtResource( 3 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
rotation = -3.14159
scale = Vector2( 2, 2 )
mesh = SubResource( 1 )

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="DeathParticles" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]

[editable path="DeathParticles"]
